--- a/src/app/design/organisms/sidebar/sidebar.component.scss
+++ b/src/app/design/organisms/sidebar/sidebar.component.scss
@@ -75,6 +75,10 @@ a {
       outline: var(--focus-outline);
     }
 
+    &--install-button {
+      border: 3px solid var(--bs-primary);
+    }
+
     &--disabled {
       color: var(--bs-gray-600);
       pointer-events: none;
