Improve outline behavior

--- a/src/app/design/atoms/badge/badge.component.scss
+++ b/src/app/design/atoms/badge/badge.component.scss
@@ -7,8 +7,7 @@
   display: flex;
   text-decoration: none;
 
-  &:focus,
-  &:hover {
+  &:focus-visible {
     outline: var(--focus-outline);
     color: inherit;
   }
