Add autosave to editable text

--- a/src/app/design/organisms/editable-text/editable-text.component.html
+++ b/src/app/design/organisms/editable-text/editable-text.component.html
@@ -32,7 +32,7 @@
   >
     <editor
       #editor
-      id="editor"
+      [id]="editorId"
       [init]="settings"
       name="textEditField"
       [(ngModel)]="textModel"
