--- a/src/app/design/organisms/editable-text/editable-text.component.html
+++ b/src/app/design/organisms/editable-text/editable-text.component.html
@@ -17,91 +17,17 @@
 }
 
 <!-- Text Body -->
-@if (canUpdate()) {
-  <button
-    class="field field--display"
-    [class.field--hidden]="state() !== 'DISPLAY'"
-    (click)="startEdit()"
-  >
-    <ng-container *ngTemplateOutlet="textBody" />
-  </button>
-  <form
-    class="field field--update"
-    [class.field--hidden]="state() !== 'UPDATE'"
-    (submit)="finishEdit()"
-  >
-    <editor
-      #editor
-      [id]="editorId"
-      [init]="settings"
-      name="textEditField"
-      [(ngModel)]="textModel"
-      class="mb-2"
-    ></editor>
-
-    <!-- Form Buttons -->
-    <ng-container [ngTemplateOutlet]="formButtons" />
-  </form>
-  <div
-    class="field field--update"
-    [class.field--hidden]="state() !== 'OUTDATED_UPDATE'"
-  >
-    <!-- Informating heading -->
-    <app-alert [kind]="'INFO'">
-      <app-icon [icon]="'info-circle'"></app-icon>
-      While you were updating this article, somebody else went ahead and updated
-      it as well. Please include their changes in your update before submitting.
-    </app-alert>
-
-    <!-- Textfield-Form -->
-    <div class="flex-column card p-4">
-      <!-- Comparison text -->
-      <div>
-        <h3>Server Version</h3>
-        <app-html-text [text]="serverModel()!" />
-      </div>
-
-      <app-separator />
-
-      <!-- Actual edit form -->
-      <form (submit)="finishEdit()">
-        <h3>Your Version</h3>
-
-        <editor
-          [init]="settings"
-          name="textEditField"
-          [(ngModel)]="textModel"
-          class="mb-2"
-        ></editor>
-
-        <!-- Form Buttons -->
-        <ng-container [ngTemplateOutlet]="formButtons" />
-      </form>
-    </div>
-  </div>
-} @else {
-  <ng-container *ngTemplateOutlet="textBody" />
-}
-
-<ng-template #formButtons>
-  <div class="field__buttons">
-    <button
-      btn
-      [icon]="'check'"
-      [text]="'Submit'"
-      [kind]="'PRIMARY'"
-      [type]="'submit'"
-    ></button>
-    <button
-      btn
-      [icon]="'times'"
-      [text]="'Cancel'"
-      [kind]="'SECONDARY'"
-      (click)="cancelEdit()"
-    ></button>
-  </div>
-</ng-template>
-
-<ng-template #textBody>
-  <app-html-text [text]="text() || placeholder()" />
-</ng-template>
+<app-editor
+  class="w-100"
+  [state]="state()"
+  [cancelButtonKind]="cancelButtonKind()"
+  [submitButtonKind]="submitButtonKind()"
+  [text]="text()"
+  [placeholder]="placeholder()"
+  [canUpdate]="canUpdate()"
+  [serverModel]="serverModel()"
+  (update)="finishEdit($event)"
+  (autosave)="this.update.emit($event)"
+  (cancel)="toggleEdit()"
+  (toggleField)="toggleEdit()"
+></app-editor>
