--- a/src/app/design/molecules/editor/editor.component.html
+++ b/src/app/design/molecules/editor/editor.component.html
@@ -14,17 +14,21 @@
     [class.field--hidden]="state() !== 'UPDATE'"
     (submit)="finishEdit()"
   >
-    <editor
-      #editor
-      [id]="editorId"
-      [init]="settings"
-      name="textEditField"
-      [(ngModel)]="textModel"
-      class="mb-2"
-    ></editor>
+    @if (_settings().skin === "oxide-dark") {
+      <editor
+        #editor
+        [id]="editorId"
+        [init]="_settings()"
+        [name]="editorId"
+        [(ngModel)]="textModel"
+        class="mb-2"
+        (onKeyDown)="change$.next(textModel)"
+      ></editor>
+    }
 
     <ng-container [ngTemplateOutlet]="formButtons" />
   </form>
+
   <!-- Outdated Update Mode -->
   <div
     class="field field--update"
@@ -52,8 +56,9 @@
         <h3>Your Version</h3>
 
         <editor
-          [init]="settings"
-          name="textEditField"
+          [init]="_settings()"
+          [name]="editorId"
+          [id]="editorId"
           [(ngModel)]="textModel"
           class="mb-2"
         ></editor>
@@ -80,6 +85,9 @@
       [icon]="'times'"
       [text]="'Cancel'"
       [kind]="cancelButtonKind()"
+      [hotkey]="'q'"
+      [disabledHotkey]="disabledHotkeys()"
+      (hotkeyPressed)="cancelEdit()"
       (click)="cancelEdit()"
     ></button>
   </div>
