--- a/src/app/design/organisms/encounter/encounter.component.scss
+++ b/src/app/design/organisms/encounter/encounter.component.scss
@@ -1,23 +1,41 @@
-.card{
+.card {
   margin-top: var(--spacer-3);
   margin-bottom: var(--spacer-3);
   padding: var(--spacer-4);
-  
-  &__heading{
+
+  &__heading {
     display: flex;
     align-items: center;
     justify-content: space-between;
   }
-  
-  &__text{
+
+  &__text {
+    width: 100%;
     margin-bottom: var(--spacer-1);
+    --bg-hover-color: var(--bs-dark);
   }
-  
-  &__connections{
+
+  &__text-container {
+    display: flex;
+    flex-direction: row;
+    gap: var(--spacer-3);
+  }
+
+  &__text-edit-button {
+    font-weight: normal;
+    border-radius: var(--bs-border-radius);
+
+    &:hover,
+    &:focus-visible {
+      outline: var(--focus-outline);
+    }
+  }
+
+  &__connections {
     margin-bottom: var(--spacer-3);
   }
-  
-  &__delete-confirmer{
+
+  &__delete-confirmer {
     padding-left: var(--spacer-0);
     padding-right: var(--spacer-0);
     display: flex;
@@ -25,27 +43,27 @@
     width: 100%;
     --confirmation-bg-color: var(--bs-dark);
   }
-  
-  &__edit-button{
+
+  &__edit-button {
     align-self: flex-start;
   }
 }
 
-.connections{
+.connections {
   display: inline-flex;
-  
-  &__label{
+
+  &__label {
     margin-right: var(--spacer-4);
   }
-  
-  &__list{
+
+  &__list {
     display: inline-flex;
     align-items: flex-start;
     flex-wrap: wrap;
   }
-  
+
   &__connection,
-  &__create-form{
+  &__create-form {
     margin: var(--spacer-0) var(--spacer-2) var(--spacer-2) var(--spacer-1);
   }
 }
