--- a/src/app/design/organisms/toast-overlay/toast-overlay.component.html
+++ b/src/app/design/organisms/toast-overlay/toast-overlay.component.html
@@ -2,9 +2,7 @@
 @let onToastClick = toast?.onToastClick;
 @if (toast && onToastClick) {
   <button
-    btn
     class="button-container"
-    [kind]="'NONE'"
     (click)="onToastClick(dismissCurrentToast.bind(this))"
   >
     <ng-container *ngTemplateOutlet="toastOverlay" />
@@ -21,10 +19,11 @@
         data-bs-theme="dark"
         [autohide]="!!toast.dismissMs && toast.dismissMs > 0"
         [delay]="toast.dismissMs ? toast.dismissMs : 0"
-        [ariaLive]="toast.important ? 'alert' : 'polite'"
         [animation]="true"
         (hidden)="dismissCurrentToast()"
         (shown)="toast.onShow ? toast.onShow() : undefined"
+        cdkTrapFocus
+        [cdkTrapFocusAutoCapture]="true"
       >
         <ng-template ngbToastHeader>
           <span class="toast-header__text">
