--- a/src/app/design/organisms/sidebar/sidebar.component.scss
+++ b/src/app/design/organisms/sidebar/sidebar.component.scss
@@ -41,6 +41,16 @@ a {
   }
 
   &__entry {
+    &--active,
+    &:hover,
+    &:focus-visible {
+      color: var(--entry-hover-color);
+      background-color: var(--entry-hover-bg-color);
+    }
+
+    &--install-button {
+      border: 3px solid var(--bs-primary);
+    }
   }
 
   &__footer {
@@ -48,48 +58,6 @@ a {
     margin: 0;
     padding: 0;
     border-top: 4px inset;
-  }
-}
-
-.entry {
-  &--active,
-  :hover,
-  :focus-visible {
-    color: var(--entry-hover-color);
-    background-color: var(--entry-hover-bg-color);
-  }
-
-  &__link {
-    display: flex;
-    align-items: center;
-    padding-left: var(--spacer-3);
-    list-style-type: none;
-    height: 2.75rem;
-    font-weight: bold;
-    font-size: large;
-    width: 100%;
-    outline: none;
-    border-radius: 0;
-
-    &:focus-visible {
-      outline: var(--focus-outline);
-    }
-
-    &--install-button {
-      border: 3px solid var(--bs-primary);
-    }
-
-    &--disabled {
-      color: var(--bs-gray-600);
-      pointer-events: none;
-    }
-  }
-
-  &__icon {
-    width: var(--spacer-5);
-    display: flex;
-    align-items: center;
-    justify-content: center;
   }
 }
 
