--- a/src/app/design/organisms/drag-and-drop-list/drag-and-drop-list.component.html
+++ b/src/app/design/organisms/drag-and-drop-list/drag-and-drop-list.component.html
@@ -14,7 +14,7 @@
       cdkDragHandle
       [icon]="'up-down-left-right'"
     ></app-icon>
-
+    {{ $index + 1 }}.
     {{ entry[labelProp()] }}
   </div>
 }
