--- a/src/app/design/organisms/drag-and-drop-list/drag-and-drop-list.component.html
+++ b/src/app/design/organisms/drag-and-drop-list/drag-and-drop-list.component.html
@@ -9,12 +9,36 @@
       <app-icon class="placeholder__icon" [icon]="'cut'"></app-icon>
     </div>
 
-    <app-icon
-      class="entry__handler"
-      cdkDragHandle
-      [icon]="'up-down-left-right'"
-    ></app-icon>
-    {{ $index + 1 }}.
-    {{ entry[labelProp()] }}
+    <span class="entry__label">
+      <app-icon
+        class="entry__handler"
+        cdkDragHandle
+        [icon]="'up-down-left-right'"
+      ></app-icon>
+      {{ $index + 1 }}.
+      {{ entry[labelProp()] }}
+    </span>
+
+    <div class="entry__buttons">
+      <button
+        btn
+        [kind]="'DARK'"
+        [size]="'SMALL'"
+        [icon]="'arrow-up'"
+        aria-label="'Move entry up'"
+        [disabled]="$first"
+        (click)="moveEncounterUp($index)"
+      ></button>
+
+      <button
+        btn
+        [kind]="'DARK'"
+        [size]="'SMALL'"
+        [icon]="'arrow-down'"
+        aria-label="'Move entry down'"
+        [disabled]="$last"
+        (click)="moveEncounterDown($index)"
+      ></button>
+    </div>
   </div>
 }
