Improve styling API of drag-and-drop component

--- a/src/app/design/organisms/drag-and-drop-list/drag-and-drop-list.component.scss
+++ b/src/app/design/organisms/drag-and-drop-list/drag-and-drop-list.component.scss
@@ -1,3 +1,10 @@
+/*
+ * To customize styling of entries, i.e. for background-color and color, use: 
+ * ::ng-deep .entry.dragn-and-drop-list-entry {
+ *    ... your rules ...
+ *  }
+ */
+
 :host {
   display: flex;
   flex-direction: column;
