--- a/src/app/design/organisms/drag-and-drop-list/drag-and-drop-list.component.html
+++ b/src/app/design/organisms/drag-and-drop-list/drag-and-drop-list.component.html
@@ -1,10 +1,6 @@
 @for (entry of entries(); track entry[idProp()]) {
-  <div
-    class="list__entry entry"
-    [style.background-color]="backgroundColor()"
-    [style.color]="color()"
-    cdkDrag
-  >
+  <!-- NOTE: drag-and-drop-list-entry is dedicated to external styling -->
+  <div class="list__entry entry drag-and-drop-list-entry" cdkDrag>
     <div class="entry__placeholder placeholder" *cdkDragPlaceholder>
       <app-icon class="placeholder__icon" [icon]="'cut'"></app-icon>
     </div>
