--- a/src/app/design/templates/diaryentry/diaryentry.component.scss
+++ b/src/app/design/templates/diaryentry/diaryentry.component.scss
@@ -1,4 +1,4 @@
-::ng-deep .entry.drag-and-drop-list-entry {
+::ng-deep app-drag-and-drop-list .entry.drag-and-drop-list-entry {
   background-color: var(--bs-secondary);
   color: var(--bs-white);
 }
