--- a/src/app/design/organisms/drag-and-drop-list/drag-and-drop-list.component.scss
+++ b/src/app/design/organisms/drag-and-drop-list/drag-and-drop-list.component.scss
@@ -47,6 +47,11 @@
     justify-content: flex-start;
   }
 
+  &__label {
+    display: flex;
+    align-items: center;
+  }
+
   &__handler {
     padding-left: var(--spacer-2);
     padding-right: var(--spacer-3);
@@ -56,6 +61,7 @@
   &__buttons {
     display: flex;
     flex-direction: row;
+    align-items: center;
     gap: var(--spacer-2);
   }
 }
