Add highlight on focus

--- a/src/app/design/molecules/editor/editor.component.html
+++ b/src/app/design/molecules/editor/editor.component.html
@@ -22,7 +22,10 @@
         [name]="editorId"
         [(ngModel)]="textModel"
         class="mb-2"
+        [class.editor--focus]="inFocus()"
         (onKeyDown)="change$.next(textModel)"
+        (onFocus)="inFocus.set(true)"
+        (onBlur)="inFocus.set(false)"
       ></editor>
     }
 
