--- a/src/app/design/templates/diaryentry/diaryentry.component.html
+++ b/src/app/design/templates/diaryentry/diaryentry.component.html
@@ -8,6 +8,7 @@
             #editDiaryentryLink
             class="edit-container__button"
             aria-label="Edit Diaryentry"
+            title="Edit Diaryentry"
             [routerLink]="updateUrl()"
             [icon]="'pencil'"
             [kind]="'SECONDARY'"
