--- a/src/app/design/templates/item/item.component.html
+++ b/src/app/design/templates/item/item.component.html
@@ -8,6 +8,7 @@
           [icon]="'pencil'"
           [kind]="'SECONDARY'"
           [routerLink]="updateUrl()"
+          [attr.aria-label]="'Edit ' + item().name"
         >
         </a>
       </div>
