--- a/src/app/design/templates/map/map.component.html
+++ b/src/app/design/templates/map/map.component.html
@@ -8,6 +8,8 @@
           [routerLink]="updateUrl()"
           [icon]="'pencil'"
           [kind]="'SECONDARY'"
+          [attr.aria-label]="'Edit ' + map().name"
+          [title]="'Edit ' + map().name"
           [hotkey]="'e'"
           (hotkeyPressed)="$event.host.click()"
         >
