--- a/src/app/design/molecules/badge-list/badge-list.component.html
+++ b/src/app/design/molecules/badge-list/badge-list.component.html
@@ -8,7 +8,7 @@
         [iconKind]="'DANGER'"
         [text]="entry.text"
         [textLink]="entry.link"
-        [icon]="canDelete() ? 'trash' : undefined"
+        [showDeleteButton]="canDelete()"
         (iconClick)="onEntryDelete(entry)"
       ></app-interactive-badge>
     }
