Fix usage of invalid aria attributes

--- a/src/app/design/molecules/edit-toggle/edit-toggle.component.html
+++ b/src/app/design/molecules/edit-toggle/edit-toggle.component.html
@@ -6,5 +6,7 @@
   (click)="onClick()"
   [hotkey]="'e'"
   [disabledHotkey]="disabledHotkey()"
+  [attr.aria-label]="title()"
+  [title]="title()"
   (hotkeyPressed)="onClick()"
 ></button>
