--- a/src/app/design/organisms/session/session.component.html
+++ b/src/app/design/organisms/session/session.component.html
@@ -23,6 +23,7 @@
       [buttonKind]="'DARK'"
       [toggled]="state() !== 'DISPLAY'"
       [disabledHotkey]="disabledHotkeys()"
+      [title]="'Edit ' + session().name"
       (toggle)="onToggle($event)"
     ></app-edit-toggle>
   }
