--- a/src/app/design/organisms/spell/spell.component.html
+++ b/src/app/design/organisms/spell/spell.component.html
@@ -22,6 +22,7 @@
         [buttonKind]="'DARK'"
         [toggled]="state() !== 'DISPLAY'"
         [disabledHotkey]="disabledHotkeys()"
+        [title]="'Edit ' + spell()?.name"
         (toggle)="onToggle($event)"
       ></app-edit-toggle>
     }
