--- a/src/app/design/molecules/choice-select/choice-select.component.html
+++ b/src/app/design/molecules/choice-select/choice-select.component.html
@@ -1,4 +1,4 @@
-<select class="form-select" (change)="onChange($event)">
+<select class="form-select" (change)="onChange($event)" [id]="id()">
   @for (choice of choices(); track $index) {
     <option
       [value]="$index"
