--- a/src/app/design/templates/map/map.component.html
+++ b/src/app/design/templates/map/map.component.html
@@ -19,8 +19,9 @@
 
     @if (mapChoices().length > 0) {
       <h3 class="map__heading heading">
-        Map of
+        <label for="map-select">Select Map: </label>
         <app-choice-select
+          id="map-select"
           class="heading__select"
           [choices]="mapChoices()"
           [labelProp]="'name'"
